# VAULT448

./: .gitignore  Cargo.toml  LICENSE  README.md  pubspec.yaml  settings.gradle  settings.gradle.kts
Android/Vault448Native/: Cargo.toml  Makefile.toml
Android/Vault448Native/src/: api.rs  app.rs  constants.rs  lib.rs
Android/Vault448Native/src/deprecated/: api.rs  fs_api.rs
Android/app/: build.gradle.kts
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/e448/productivity/vault448/: InternalStorageSizeCalc.kt  MainActivity.kt  PermissionHandler.kt  Root.kt  RootPage.kt  UiUtils.kt  constants.kt  fsBgWorker.kt  fsWorker.kt  media.kt  rustFFI.kt
Android/app/src/main/java/e448/productivity/vault448/fileManager/: InternalStorageListener.kt
Android/app/src/main/java/e448/productivity/vault448/initializer/: NoPermissionsPage.kt  fsForegroundService.kt
Android/app/src/main/res/drawable/: connection.xml  documents.xml  files.xml  graph.xml  ic_launcher.xml  ic_launcher_round.xml  locked.xml  phone_storage_ssd.xml  photos.xml  vault.xml  vault448_logo_horizontal.xml  videos.xml
Android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
Android/app/src/test/java/e448/productivity/vault448/: ExampleUnitTest.kt
Android/gradle/wrapper/: gradle-wrapper.properties
Vault448-Common/: Cargo.toml
Vault448-Common/src/: errors.rs  lib.rs
Vault448-Common/src/fs_ops/: fs_utils.rs  mod.rs
Vault448Native/: Cargo.toml  LICENSE  Makefile.toml  README.md  deny.toml  uniffi.toml
Vault448Native/src/: api.rs  api.udl  app.rs  app_info.rs  bridge_generated.io.rs  bridge_generated.rs  constants.rs  errors.rs  fs_api.rs  fs_reader.rs  lib.rs
Vault448Native/src/fs_ops/: fs_reader.rs  mod.rs
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/448/productivity/vault/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
app/: build.gradle  build.gradle.kts
app/src/androidTest/java/e448/productivity/vault448/: ExampleInstrumentedTest.kt
app/src/androidTest/java/engineering448/vault448/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/e448/productivity/vault448/: InternalStorageSizeCalc.kt  MainActivity.kt  PermissionHandler.kt  RootPage.kt  Rust.kt  UiUtils.kt  bg_work.kt  constants.kt  fsBgWorker.kt  rustFFI.kt  testsuite.kt
app/src/main/java/e448/productivity/vault448/fs_ffi/: init.kt
app/src/main/java/engineering448/vault448/: MainActivity.kt  Rust.kt  SplashViewModel.kt  constants.kt
app/src/main/java/engineering448/vault448/screens/: Permissions.kt  root_ui.kt
app/src/main/java/engineering448/vault448/ui/theme/: Color.kt  TextType.kt  Theme.kt
app/src/main/res/drawable/: android.xml  compressed.xml  download.xml  electric_guitar.xml  extras.xml  favourites.xml  graph.xml  ic_launcher.xml  ic_launcher_foreground.xml  puzzle.xml  trash.xml  unlocked.xml  usb_c.xml  vault448_logo.xml
app/src/main/res/values/: splashs.xml  themes.xml
app/src/main/res/values-v31/: themes.xml
app/src/test/java/engineering448/vault448/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
lib/: blocks.dart  bridge_generated.dart  constants.dart  main.dart  native_loader.dart  permissions.dart  text.dart
lib/file_ops/: total_storage.dart
lib/root_page_screens/: connections_section.dart  gib_and_files.dart  multimedia_section.dart  page_header.dart  percentage_total.dart  root_page.dart  utilities_section.dart
(+5 files in other folders)
