[package]
name = "vault448-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte_prefix = "1.0.0"
tai64 = { version = "4.0.0", features = [] }
camino.workspace = true
blocking = "1.4.1"
smol = "2.0.0"
thiserror = "1.0.49"
dir-meta.workspace = true
chrono = { version = "0.4.31", default-features = false, features = [
    "android-tzdata",
    "clock",
    "iana-time-zone",
    "std",
] }
human_format.workspace = true
