[package]
name = "vault448-native"
version = "0.2.0-alpha1"
authors = ["448 ENGINEERING Developers <superuser@448.africa>"]
license = "LicenseRef-BSL-1.1"
description = "Native code for Vault448 File Manager"
publish = false
edition = "2021"

[lib]
name = "vault448_native"
crate-type = ["cdylib"]

[dependencies]
fs_extra = "1.3.0"
jni = { version = "0.21.1", features = ["invocation"] }
notify = { version = "6.1.1", default-features = false }
