[package]
name = "vault448-native"
version = "0.3.0-alpha1"
authors = ["448 ENGINEERING Developers <superuser@448.africa>"]
license = "LicenseRef-BSL-1.1"
description = "Native code for Vault448 File Manager"
publish = false
edition = "2021"

[lib]
name = "vault448_native"
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
fs_extra = "1.3.0"
notify = { version = "6.1.1", default-features = false }
file-format = { version = "0.20.0", features = [
    "reader",
    "reader-asf",
    "reader-cfb",
    "reader-ebml",
    "reader-exe",
    "reader-pdf",
    "reader-rm",
    "reader-txt",
    "reader-xml",
    "reader-zip",
] }
byte_prefix = "1.0.0"
tai64 = { version = "4.0.0", features = [] }
camino = "1.1.6"
blocking = "1.3.1"
uniffi = "0.24.3"

[build-dependencies]
uniffi = { version = "0.24.3", features = ["build"] }
