[package]
name = "vault448-native"
version = "0.3.0-alpha1"
authors = ["448 ENGINEERING Developers <superuser@448.africa>"]
license = "LicenseRef-BSL-1.1"
description = "Native code for Vault448 File Manager"
publish = false
edition = "2021"

[lib]
name = "vault448_native"
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs/", rev = "a3403ac" }
notify = { version = "6.1.1", default-features = false }
byte_prefix = "1.0.0"
tai64 = { version = "4.0.0", features = [] }
camino = "1.1.6"
blocking = "1.4.1"
smol = "1.3.0"
once_cell = "1.18.0"
thiserror = "1.0.49"
dir-meta = "0.4.1"
human_format = "1.0.3"
